fixed spacing of prop detail page and added new loc icon

--- a/src/app/templates/t1/t1.component.scss
+++ b/src/app/templates/t1/t1.component.scss
@@ -342,6 +342,14 @@ h5{
 } 
 
 .search-container {
+  p{
+    font-size: 13px !important;
+  }
+
+  span{
+    font-size: 13px !important;
+  }
+
   .bg-badge{
     background-color: #22614B;
     color: white;
